<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favourites" />
    <item
        android:id="@+id/responsesFragment"
        android:icon="@drawable/ic_responses"
        android:title="@string/responses" />
    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_messages"
        android:title="@string/messages" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
          android:title="@string/profile" />
</menu>
